<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="undefined_miui">Undefined</string>
    <string name="add_button_miui">Add </string>
    <string name="add_zero_prefix">Add 0 prefix while dialing mobile number</string>
    <string name="always_enable_mms_miui">Always receive MMS</string>
    <string name="always_enable_mms_summary_miui">Always receive MMS even when data is disabled</string>
    <string name="answer_and_hangup_miui">Hang up and answer</string>
    <string name="answer_features_setting_category_miui">Answer settings</string>
    <string name="answer_miui">Answer</string>
    <string name="answer_widget_dialog_title_miui">Select answering gesture</string>
    <string name="answer_widget_sliding_horizontal_miui">Horizontal sliding</string>
    <string name="answer_widget_sliding_vertical_miui">Vertical sliding</string>
    <string name="answer_widget_title_miui">Answering gesture</string>
    <string name="answer_state_setting_title">Incoming call status settings</string>
    <string name="answer_state_setting_summary">Settings for flip to mute, proximity sensor, etc.</string>
    <string name="answer_state_setting_title_miui">Incoming call status settings</string>
    <string name="areacode_required_for_emergency_number_miui">Locale area code required for emergency calls</string>
    <string name="areacode_required_miui">Area code is required</string>
    <string name="areacode_required_accept_miui">OK</string>
    <string name="auto_answer_summary_not_enabled">Not enabled</string>
    <string name="auto_answer_summary_delay">(delay:%ss)</string>
    <string name="auto_answer_delay_entries_delay_10s_miui">10s</string>
    <string name="auto_answer_delay_entries_delay_3s_miui">3s</string>
    <string name="auto_answer_delay_entries_delay_5s_miui">5s</string>
    <string name="auto_answer_delay_entries_immediately_miui">0s</string>
    <string name="auto_answer_delay_title_miui">Delay for auto answer</string>
    <string name="auto_answer_pref_summary_miui">Answer calls automatically</string>
    <string name="auto_answer_pref_title_miui">Auto answer</string>
    <string name="auto_answer_scenario_enteries_always_miui">Always</string>
    <string name="auto_answer_scenario_enteries_bluetooth_only_miui">Bluetooth only</string>
    <string name="auto_answer_scenario_enteries_headset_bluetooth_miui">Headset / Bluetooth only</string>
    <string name="auto_answer_scenario_enteries_headset_only_miui">Headset only</string>
    <string name="auto_answer_scenario_title_miui">Scenarios for Auto answer</string>
    <string name="auto_answer_setting_title_miui">Auto answer settings</string>
    <string name="auto_country_code_miui">Auto-add country code</string>
    <string name="auto_country_code_sum_miui">Automatically adds country code before dialing known contacts. The number with country code will be dailed directly.</string>
    <string name="autoip_miui">Auto IP dialing</string>
    <string name="auto_ip_summary_not_enabled">Not enabled</string>
    <string name="auto_ip_setting_miui">Automatic IP settings</string>
    <string name="autoip_sum_miui">Add IP prefix to a foreign number. Enter current area code below.</string>
    <string name="auto_ip_exception_miui">Numbers that don\'t need IP prefix</string>
    <string name="auto_ip_no_exceptions_miui">Please adds numbers that don\'t need IP prefix</string>
    <string name="auto_ip_add_exception_numbers_miui">Add numbers</string>
    <string name="auto_ip_remove_exception_numbers_confirm_miui">Are you sure you want to delete those %d numbers?</string>
    <string name="auto_ip_exception_summary_miui"> %d total</string>
    <string name="auto_ip_exception_summary_more_miui">,... %d total</string>
    <string name="auto_ip_support_local_numbers">Support local numbers</string>
    <string name="auto_record_call_summary_miui">Calls are recorded and save into the MIUI/sound_recorder/call_rec folder in the SD card</string>
    <string name="auto_record_call_title_miui">Record automatically</string>
    <string name="auto_record_scenario_title_miui">Set auto recording </string>
    <string name="auto_record_scenario_enteries_always_miui">All numbers</string>
    <string name="auto_record_scenario_enteries_whitelist_miui">Specific numbers</string>
    <string name="auto_record_whitelist_miui">Setup specific numbers</string>
    <string name="auto_record_whitelist_no_item_miui">Click \'Add Numbers\' below to add numbers for auto recording</string>
    <string name="auto_record_whitelist_summary_for_one_miui"> 1 number</string>
    <string name="auto_record_whitelist_summary_miui"> %d numbers</string>
    <string name="auto_redial_pref_summary_miui">Redial automatically if line is busy</string>
    <string name="auto_redial_pref_title_miui">Auto redial</string>
    <string name="auto_retry_mode_summary_miui">Enable auto retry mode</string>
    <string name="auto_retry_mode_title_miui">Auto retry</string>
    <string name="bad_pin2_miui">The old PIN2 you typed is not correct. Please try again.</string>
    <string name="bad_pin_miui">The old PIN you typed is not correct. Please try again.</string>
    <string name="bad_puk2_miui">The PUK2 you typed is not correct. Please try again.</string>
    <string name="bad_puk_miui">The PUK you typed is not correct. Please try again.</string>
    <string name="call_assistant_miui">Dialing assistant</string>
    <string name="caller_id_sum_miui">Hide / Show my number for outgoing calls (if network support)</string>
    <string name="caller_id_title_miui">Caller ID</string>
    <string name="caller_manage_manage_done_text_miui">Back to call</string>
    <string name="call_forwarding_number_hint_miui">Enter the number to forward to</string>
    <string name="call_forwarding_settings_miui">Call forward settings</string>
    <string name="calling_via_template_miui">Calling via ^1\n<b>^2</b></string>
    <string name="call_log_number_limit_miui">Call log storage</string>
    <string name="call_log_number_limit_summary_miui">Setting the amount of call log to storage</string>
    <string name="call_log_number_limit_setting_title">Call log storage setting</string>
    <string name="call_log_number_limit_setting_switcher">Restrictions</string>
    <string name="call_log_number_limit_setting_switcher_summary">Limit call log storage amount to improve efficiency</string>
    <string name="call_log_number_limit_key_title">Maximum</string>
    <string name="call_log_number_limit_title">Set call log storage amount</string>
    <string name="call_log_number_limit_subsummary">%d</string>
    <string name="call_record_setting_miui">Record settings</string>
    <string name="call_recording_notification_summary_miui">Show notification in status bar when recording is complete</string>
    <string name="call_recording_notification_title_miui">Recording call notification</string>
    <string name="call_recording_prompt_miui">Open call recording</string>
    <string name="call_record_notification_message_low_space_miui">Recording stopped due to low memory, click to view %s.</string>
    <string name="call_record_notification_message_miui">Click to view %s.</string>
    <string name="call_record_notification_message_sd_unmounted_miui">Recording stopped because SD card is unmounted.</string>
    <string name="call_settings_category_miui">Call settings</string>
    <string name="call_settings_miui">Call settings</string>
    <string name="cfb_title_miui">Forward when busy</string>
    <string name="cfnrc_title_miui">Forward when unreachable</string>
    <string name="cfnry_title_miui">Forward When unanswered</string>
    <string name="cfu_title_miui">Always forward</string>
    <string name="connect_disconnect_vibrate_summary_miui"></string>
    <string name="connect_disconnect_vibrate_title_miui">Vibrate level when receiver ans/hangs up</string>
    <string name="current_areacode_miui">Current area code</string>
    <string name="current_areacode_sum_miui">Area code of current location, or roaming area code if you are roaming. For example: 010</string>
    <string name="default_contacts_countrycode_hint_miui">For example: 86</string>
    <string name="default_contacts_countrycode_miui">Default contacts country code</string>
    <string name="disable_all_cf_miui">Disable all call-forwarding features</string>
    <string name="enable_miui">Enable</string>
    <string name="enable_proximity_summary_miui">Enable proximity sensor to disable screen display during calls</string>
    <string name="enable_proximity_title_miui">Enable proximity sensor</string>
    <string name="enable_telocation_title_miui">Show location</string>
    <string name="enforce_proximity_summary_miui">Prevent misuse of phone when not being used</string>
    <string name="enforce_proximity_title_miui">Enforce proximity sensor</string>
    <string name="handon_ringer_summary_miui">In vain when vibration enabled for incoming call</string>
    <string name="handon_ringer_title_miui">Quiet ring on pickup</string>
    <string name="incall_screen_background_title_miui">Call screen background</string>
    <string name="incall_screen_background_summary_miui">Use lockscreen wallpaper when there\'s no avatar</string>
    <string name="ip_prefix_miui">IP prefix</string>
    <string name="ip_prefix_sum_miui">Carrier\'s IP prefix: %s</string>
    <string name="pref_custom_location_summary_miui">Customize regional attribution and number attribution</string>
    <string name="pref_custom_location_title_miui"> Customize attribution </string>
    <string name="preferred_network_type_pref_entries_3g_preferred_miui">3G Preferred</string>
    <string name="preferred_network_type_pref_entries_auto_miui">Automatic</string>
    <string name="preferred_network_type_pref_entries_only_2g_miui">Only 2G (power-saving)</string>
    <string name="preferred_network_type_pref_entries_only_3g_miui">Only 3G</string>
    <string name="preferred_network_type_pref_entries_global_miui">Global</string>
    <string name="preferred_network_type_cdma_miui">CDMA</string>
    <string name="preferred_network_type_gsm_umts_miui">GSM/WCDMA</string>
    <string name="preferred_network_type_title_miui">Network type selection</string>
    <string name="reject_via_sms_miui">Reject via sms</string>
    <string name="reject_via_sms_summary_miui">Set the SMS sent to the caller when you reject</string>
    <string name="reject_via_sms_title_miui">Reject via SMS setting</string>
    <string name="telocation_setting_miui">Location setting</string>
    <string name="telocation_show_settings_miui">Display settings</string>
    <string name="turnover_mute_title_miui">Flip to silence</string>
    <string name="turnover_mute_summary_miui">Flip to silence while the is phone placed horizontally</string>
    <string name="respond_via_sms_canned_response_1_miui">I\'m sorry I can\'t answer the phone right now. I\'ll get back to you later.</string>
    <string name="respond_via_sms_canned_response_2_miui">I\'m sorry I can\'t answer the phone right now. Please leave a message.</string>
    <string name="respond_via_sms_canned_response_3_miui">I\'m busy right now. Call you later.</string>
    <string name="respond_via_sms_canned_response_4_miui">Can\'t talk over the phone right now. What\'s up?</string>
    <string name="call_waiting_tone_title_miui">Call waiting prompt tone </string>
    <string name="missed_call_notify_times_title_miui">Missed call reminder</string>
    <string name="missed_call_notify_times_summary_miui">Repeats reminders every 5 minutes by default. Select number of reminders.</string>
    <string name="dial_pad_touch_tone_setting_miui">Dial pad touch tones settings</string>
    <string name="dial_pad_touch_tone_miui">Dial pad touch tones</string>
    <string name="tone_miui">Tone</string>
    <string name="t9_indexing_method_title_miui">T9 search setting</string>
</resources>