<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
        android:title="@string/call_settings_miui">

    <PreferenceCategory android:title="@string/dial_related_setting_catory_miui">
        <ListPreference
            android:key="button_t9_index_method_settings"
            android:title="@string/t9_indexing_method_title_miui"
            android:persistent="true"
            android:entries="@array/t9_indexing_method_entries_miui"
            android:entryValues="@array/t9_indexing_method_entry_values_miui"/>
        <CheckBoxPreference
            android:key="button_auto_redial"
            android:title="@string/auto_redial_pref_title_miui"
            android:defaultValue="false"
            android:summary="@string/auto_redial_pref_summary_miui" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/answer_features_setting_category_miui">
        <ListPreference
            android:key="button_answer_widget"
            android:title="@string/answer_widget_title_miui"
            android:entries="@array/answer_widget_entries_miui"
            android:entryValues="@array/answer_widget_entry_values_miui"
            android:dialogTitle="@string/answer_widget_dialog_title_miui"
            android:defaultValue="1" />
        <PreferenceScreen
            android:key="button_auto_answer_screen"
            android:title="@string/auto_answer_pref_title_miui">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.MiuiAutoAnswerSetting" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="button_respond_via_sms_key"
            android:title="@string/reject_via_sms_miui"
            android:summary="@string/reject_via_sms_summary_miui"
            android:persistent="false">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.MiuiRespondViaSmsManagerSettings" />
        </PreferenceScreen>
        <PreferenceScreen
            android:key="button_answer_state_setting"
            android:title="@string/answer_state_setting_title"
            android:summary="@string/answer_state_setting_summary">
            <intent android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.phone"
                android:targetClass="com.android.phone.MiuiAnswerStateSetting" />
        </PreferenceScreen>
        <ListPreference
            android:key="button_missed_call_notify_times"
            android:title="@string/missed_call_notify_times_title_miui"
            android:summary="@string/missed_call_notify_times_summary_miui"
            android:defaultValue="0"
            android:entries="@array/missed_call_notify_times_entries_miui"
            android:entryValues="@array/missed_call_notify_times_entry_values_miui"
            android:dialogTitle="@string/missed_call_notify_times_title_miui" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/call_settings_category_miui">
        <ListPreference
            android:key="button_connect_disconnect_vibrate"
            android:title="@string/connect_disconnect_vibrate_title_miui"
            android:summary="@string/connect_disconnect_vibrate_summary_miui"
            android:defaultValue="0"
            android:entries="@array/connect_disconnect_vibrate_entries_miui"
            android:entryValues="@array/connect_disconnect_vibrate_entry_values_miui"
            android:dialogTitle="@string/connect_disconnect_vibrate_title_miui" />
        <ListPreference
            android:key="button_call_waiting_tone"
            android:title="@string/call_waiting_tone_title_miui"
            android:defaultValue="0"
            android:entries="@array/call_waiting_tone_entries_miui"
            android:entryValues="@array/call_waiting_tone_entry_values_miui"
            android:dialogTitle="@string/call_waiting_tone_title_miui" />
        <CheckBoxPreference
            android:key="button_incall_screen_background"
            android:title="@string/incall_screen_background_title_miui"
            android:defaultValue="true"
            android:summary="@string/incall_screen_background_summary_miui" />
    </PreferenceCategory>
</PreferenceScreen>
