<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
        android:title="@string/auto_ip_setting_miui">
    <PreferenceCategory>
        <CheckBoxPreference
            android:key="button_autoip"
            android:title="@string/autoip_miui"
            android:defaultValue="false"
            android:summary="@string/autoip_sum_miui"
            android:persistent="true"
            android:disableDependentsState="false"/>
        <EditTextPreference
            android:key="button_text_ip_prefix"
            android:title="@string/ip_prefix_miui"
            android:summary="@string/ip_prefix_sum_miui"
            android:inputType="phone"
            android:persistent="true"
            android:dependency="button_autoip" />
        <EditTextPreference
            android:key="button_text_current_areacode"
            android:title="@string/current_areacode_miui"
            android:summary="@string/current_areacode_sum_miui"
            android:persistent="true"
            android:inputType="phone"
            android:dependency="button_autoip" />
    </PreferenceCategory>
</PreferenceScreen>
