<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
        android:title="@string/preferred_network_type_title_miui">
    <com.mediatek.settings.SimPreference
        android:key="pref_sim_info"
        android:title=""
        android:summary=""
        android:layout="@layout/pre_sim_select"
        android:persistent="false">
    </com.mediatek.settings.SimPreference>
    <miui.preference.RadioButtonPreferenceCategory
        android:key="network_type_list_global">
        <miui.preference.RadioButtonPreference
            android:key="7"
            android:title="@string/preferred_network_type_pref_entries_global_miui" />
    </miui.preference.RadioButtonPreferenceCategory>
    <miui.preference.RadioButtonPreferenceCategory
        android:title="@string/preferred_network_type_cdma_miui"
        android:key="network_type_list_cdma">
        <miui.preference.RadioButtonPreference
            android:key="4"
            android:title="@string/preferred_network_type_pref_entries_auto_miui" />
    </miui.preference.RadioButtonPreferenceCategory>
    <miui.preference.RadioButtonPreferenceCategory
        android:title="@string/preferred_network_type_gsm_umts_miui"
        android:key="network_type_list_gsm_umts">
        <miui.preference.RadioButtonPreference
            android:key="0"
            android:title="@string/preferred_network_type_pref_entries_3g_preferred_miui" />
        <miui.preference.RadioButtonPreference
            android:key="1"
            android:title="@string/preferred_network_type_pref_entries_only_2g_miui" />
        <miui.preference.RadioButtonPreference
            android:key="2"
            android:title="@string/preferred_network_type_pref_entries_only_3g_miui" />
    </miui.preference.RadioButtonPreferenceCategory>
</PreferenceScreen>

