<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/reject_via_sms_title_miui">
    <com.android.phone.MultiLineTitleEditTextPreference
        android:key="canned_response_pref_1"
        android:defaultValue="@string/respond_via_sms_canned_response_1_miui"
        android:dialogTitle="@string/respond_via_sms_edittext_dialog_title" />

    <com.android.phone.MultiLineTitleEditTextPreference
        android:key="canned_response_pref_2"
        android:defaultValue="@string/respond_via_sms_canned_response_2_miui"
        android:dialogTitle="@string/respond_via_sms_edittext_dialog_title" />

    <com.android.phone.MultiLineTitleEditTextPreference
        android:key="canned_response_pref_3"
        android:defaultValue="@string/respond_via_sms_canned_response_3_miui"
        android:dialogTitle="@string/respond_via_sms_edittext_dialog_title" />

    <com.android.phone.MultiLineTitleEditTextPreference
        android:key="canned_response_pref_4"
        android:defaultValue="@string/respond_via_sms_canned_response_4_miui"
        android:dialogTitle="@string/respond_via_sms_edittext_dialog_title" />
</PreferenceScreen>
