<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
        android:title="@string/call_log_number_limit_setting_title">

    <CheckBoxPreference
        android:key="button_call_log_number_limit"
        android:persistent="false"
        android:summary="@string/call_log_number_limit_setting_switcher_summary"
        android:title="@string/call_log_number_limit_setting_switcher" />
    <Preference
        android:dependency="button_call_log_number_limit"
        android:key="pref_key_call_log_limit"
        android:layout="?android:attr/preferenceLayoutChild"
        android:persistent="false"
        android:title="@string/call_log_number_limit_key_title" />

</PreferenceScreen>