<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings" >

    <miui.preference.RadioButtonPreferenceCategory android:key="network_type_list_gsm_umts" >
        <miui.preference.RadioButtonPreference
            android:key="0"
            android:title="@string/preferred_network_type_pref_entries_3g_preferred_miui" />
        <miui.preference.RadioButtonPreference
            android:key="1"
            android:title="@string/preferred_network_type_pref_entries_only_2g_miui" />
        <miui.preference.RadioButtonPreference
            android:key="2"
            android:title="@string/preferred_network_type_pref_entries_only_3g_miui" />
    </miui.preference.RadioButtonPreferenceCategory>

</PreferenceScreen>