<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:phone="http://schemas.android.com/apk/res/com.android.phone"
    android:title="@string/dial_pad_touch_tone_setting_miui">

    <CheckBoxPreference
        android:key="button_dial_pad_touch_tone_key"
        android:title="@string/dial_pad_touch_tone_miui"
        android:defaultValue="true"
        android:persistent="false" />

    <ListPreference
        android:key="button_tone_key"
        android:title="@string/tone_miui"
        android:defaultValue="-1"
        android:entries="@array/dial_pad_touch_tone_entries_miui"
        android:entryValues="@array/dial_pad_touch_tone_entry_values_miui"
        android:dialogTitle="@string/tone_miui"
        android:dependency="button_dial_pad_touch_tone_key"
        android:persistent="false" />

</PreferenceScreen>
